# SmartPi

./: CMakeLists.txt  Makefile  sfmlbasic.cpp
src/: .get_weather.cpp.swp  .get_weather.hpp.swp  .main.cpp.swp  CMakeLists.txt  get_weather.cpp  get_weather.hpp  main.cpp  sfmlbasic.cpp
